--- a/Website/Views/Packages/DisplayPackage.cshtml
+++ b/Website/Views/Packages/DisplayPackage.cshtml
@@ -65,6 +65,17 @@
             {
                 <li><a href="@Model.LicenseUrl" title="Make sure you agree with the license">License</a></li>
             }
+            @if (!String.IsNullOrEmpty(Model.SourceCodeUrl))
+            {
+                <li><a href="@Model.SourceCodeUrl" title="Visit this link to view the package's source code">
+                        Source Code</a></li>
+            }
+            @if (!String.IsNullOrEmpty(Model.IssueTrackerUrl))
+            {
+                <li><a href="@Model.IssueTrackerUrl" title="Visit this link to view or file bugs about this package">
+                        Issue Tracker</a></li>
+            }
+            <li><a href="@Url.Action(MVC.Packages.ContactOwners(Model.Id))">Contact Owners</a></li>
             @if (Model.IsOwner(User))
             {
                 <li><a href="@Url.Action(MVC.Packages.ReportMyPackage(Model.Id, Model.Version))" title="Contact support for help with your package">
@@ -75,7 +86,6 @@
                 <li><a href="@Url.Action(MVC.Packages.ReportAbuse(Model.Id, Model.Version))" title="Report the package as abusive">
                         Report Abuse</a></li>
             }
-            <li><a href="@Url.Action(MVC.Packages.ContactOwners(Model.Id))">Contact Owners</a></li>
             @if (User.Identity.IsAuthenticated)
             {
                 <li><a href="@Url.PackageDownload(2, Model.Id, Model.Version)" title="Download the raw nupkg file.">Download</a></li>
@@ -86,7 +96,7 @@
             }
             @if (Model.IsOwner(User))
             {
-                <li><a href="@Url.EditPackage(Model)">Edit Package</a></li>
+                <li><a href="@Url.EditPackage(Model.Id, null)">Edit Package</a></li>
                 <li><a href="@Url.ManagePackageOwners(Model)">Manage Owners</a></li>
                 <li><a href="@Url.DeletePackage(Model)" class="delete">Delete Package</a></li>
             }
