--- a/Website/Views/Statistics/Index.cshtml
+++ b/Website/Views/Statistics/Index.cshtml
@@ -127,7 +127,12 @@
 @section BottomScripts
 {
     @* Right now this is the only page that uses this script. If we increase our usage of it, we should put it in our bundles *@
-    @Scripts.Render("~/Scripts/d3.v3.min.js")
+
+    @if (Model.UseD3)
+    {
+        @Scripts.Render("~/Scripts/d3.v3.min.js")
+    }
+
     @Scripts.Render("~/Scripts/statsgraphs.js")
     <script>
         $(document).ready(displayGraphs);
